--- a/README.org
+++ b/README.org
@@ -18,7 +18,7 @@ For Archlinux, it is already setup in installation step [[file:archlinux/bootstr
 #+begin_src bash
 mkdir ~/myhome
 #+end_src
-Note: We do not do backup whole home directory, but put everything into =~myhome= directory instead to clean up the mess created by applications.
+Note: I do not do backup whole home directory, but put everything into =~/myhome= directory instead to clean up the mess created by applications when reinstall OS
 Dot files will be setup later by ansible roles in [[https://github.com/novicecpp/home-config-ansible-private][home-config-ansible-private]].
 *** Clone [[https://github.com/novicecpp/home-config][home-config]] and [[https://github.com/novicecpp/home-config-private][home-config-private]] to =~/myhome=. Need ssh-agent to clone private repo.
 #+begin_src bash
@@ -37,15 +37,17 @@ git clone git@github.com:novicecpp/home-config-ansible.git
 cd home-config-ansible
 git submodule update --init
 #+end_src
-*** Run ansible
+*** Run ansible setup
 #+begin_src bash
 cd ~/myhome/home-config-ansible
 bash example_run.sh  # Switch playbook and inventory to the machine you run in the script.
 #+end_src
+*** Run home-config setup
+TBD
 *** If dnf has updated linux-firmware (fedora), restart cold boot.
 For lenovo X1/P1,
-- Remove power cord
-- Restart
-- Open bios menu > Power > Turn of built-in battery
-- wait 5 seconds
-- Plug in power cord, open laptop
+- Remove power cord.
+- Restart.
+- Open bios menu > Power > Turn of built-in battery.
+- wait 5 seconds.
+- Plug in power cord, open laptop.
