--- a/README.org
+++ b/README.org
@@ -40,6 +40,35 @@ git clone git@github.com:novicecpp/home-config.git
 cd home-config
 git submodule update --init
 #+end_src
+*** Setup pipenv
+Copy from [[https://github.com/novicecpp/home-config/blob/f37721c998950a5ae8d92c509dde4182aa2b2126/bash/pyenv.sh#L9-L29][pyenv.sh]].
+#+begin_src bash
+f_pyenv_init_pipenv ()
+{
+    if [[ "$#" -ne 1 ]]; then
+        echo 'Error: python version required.';
+        echo "Usage: ${FUNCNAME[0]} <python_version>";
+        return 1;
+    fi;
+    PY_VERSION=${1};
+    if [[ -d .venv ]]; then
+        echo 'Error: .venv exists.';
+        return 1;
+    fi;
+    export PYENV_ROOT="$HOME/.pyenv";
+    command -v pyenv > /dev/null || export PATH="$PYENV_ROOT/bin:$PATH";
+    eval "$(pyenv init -)";
+    pyenv shell "${PY_VERSION}" || rc=$?;
+    [[ $rc -ne 0 ]] && return "$rc";
+    python -m venv .venv --prompt "$(basename $PWD)";
+    source .venv/bin/activate;
+    pip install -U pip;
+    pip install pipenv
+}
+
+f_pyenv_init_pipenv 3.11 && pipenv sync
+#+end_src
+
 *** Run home-config-ansible
 #+begin_src bash
 cd ~/myhome/home-config-ansible
